<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.inframonitor</groupId>
    <artifactId>inframonitor-agent</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>
    <name>InfraMonitor Remote Agent</name>
    <description>Lightweight agent that connects to InfraMonitor backend and runs checks on remote networks</description>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- Zero external runtime dependencies — uses only Java 11 built-ins -->

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.inframonitor.agent.InfraMonitorAgent</mainClass>
                        </manifest>
                    </archive>
                    <finalName>inframonitor-agent</finalName>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
